1. Collection API Улучшения [#235653]